--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(77, 77, 77);
+    background-color: rgb(22, 21, 21);
 }
 #menu ul li{
     display: inline;
@@ -12,10 +12,49 @@ body{
 
 #menu ul li a{
     display: inline-block;
-    padding: 2px 10px;
-    color: brown;
+    padding: 2px 100px;
+    color: rgb(196, 0, 0);
 }
 
 #menu{
     text-align: center;
+}
+#imgs{
+    display: inline;
+}
+
+/* #texts{
+    color: aliceblue;
+    display: inline;
+} */
+
+.imgRoh{
+    margin-top: 6%;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    margin-left: 24%;
+}
+
+.imgFelipe{
+    margin-top: 6%;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    margin-left: 20%;
+}
+
+#texts ul li p{
+    display: inline-block;
+    padding: 2px 185px;
+    color: aliceblue;
+}
+
+.nomeRoh{
+    margin-left: 140px;
+}
+
+#texts ul li{
+    display: inline-block;
+    
 }
